--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <div class="header">
+      <div>Header Logo</div>
+      <div class="header-links">
+        <a href="#">header link one</a>
+        <a href="#">header link two</a>
+        <a href="#">header link three</a>
+      </div>
     </div>
   </body>
 </html>
