--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,17 @@
         <a href="#">header link three</a>
       </div>
     </div>
+    <div class="hero">
+      <div class="hero-left">
+        <div class="hero-header">This website is awesome</div>
+        <div class="hero-description">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast.
+        </div>
+        <button>Sign up</button>
+      </div>
+
+      <img src="" alt="image placeholder" />
+    </div>
   </body>
 </html>
