--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,23 @@
 
       <img src="" alt="image placeholder" />
     </div>
+    <div class="middle-part">
+      <div class="middle-img">
+        <img src="" alt="placeholder" />
+        <div class="img-subtext"></div>
+      </div>
+      <div class="middle-img">
+        <img src="" alt="placeholder" />
+        <div class="img-subtext"></div>
+      </div>
+      <div class="middle-img">
+        <img src="" alt="placeholder" />
+        <div class="img-subtext"></div>
+      </div>
+      <div class="middle-img">
+        <img src="" alt="placeholder" />
+        <div class="img-subtext"></div>
+      </div>
+    </div>
   </body>
 </html>
