Add quote section and change section namings

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">
+    <div class="header-section">
       <div>Header Logo</div>
       <div class="header-links">
         <a href="#">header link one</a>
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="hero">
-      <div class="hero-left">
+      <div class="hero-section">
         <div class="hero-header">This website is awesome</div>
         <div class="hero-description">
           This website has some subtext that goes here under the main title.
@@ -27,7 +27,7 @@
 
       <img src="" alt="image placeholder" />
     </div>
-    <div class="middle-part">
+    <div class="middle-section">
       <div class="middle-img">
         <img src="" alt="placeholder" />
         <div class="img-subtext"></div>
@@ -44,6 +44,14 @@
         <img src="" alt="placeholder" />
         <div class="img-subtext"></div>
       </div>
+    </div>
+    <div class="quote-section">
+      <div class="quote-text">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+      </div>
+      <div class="quote-author">-Thor, God of Thunder</div>
     </div>
   </body>
 </html>
