Add CTA section

--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,14 @@
       </div>
       <div class="quote-author">-Thor, God of Thunder</div>
     </div>
+    <div class="call-to-action-section">
+      <div class="blue-box">
+        <div class="box-header">Call to action! It' time!</div>
+        <div class="box-subtext">
+          Sign up for our product by clicking that button right over there!
+        </div>
+        <button>Sign up</button>
+      </div>
+    </div>
   </body>
 </html>
