--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,14 @@
         <a href="#">header link three</a>
       </div>
     </div>
-    <div class="hero">
-      <div class="hero-section">
-        <div class="hero-header">This website is awesome</div>
-        <div class="hero-description">
-          This website has some subtext that goes here under the main title.
-          It's a smaller font and the color is lower contrast.
-        </div>
-        <button>Sign up</button>
+
+    <div class="hero-section">
+      <div class="hero-header">This website is awesome</div>
+      <div class="hero-description">
+        This website has some subtext that goes here under the main title. It's
+        a smaller font and the color is lower contrast.
       </div>
+      <button>Sign up</button>
 
       <img src="" alt="image placeholder" />
     </div>
@@ -61,6 +60,9 @@
         </div>
         <button>Sign up</button>
       </div>
+    </div>
+    <div class="bottom-section">
+      <div class="bottom-text"></div>
     </div>
   </body>
 </html>
