--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header-section">
-      <div>Header Logo</div>
-      <div class="header-links">
+    <div class="header-section dark-bg">
+      <div class="header-logo">Header Logo</div>
+      <div class="header-urls">
         <a href="#">header link one</a>
         <a href="#">header link two</a>
         <a href="#">header link three</a>
