Add background color for hero and change color of header urls

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       </div>
     </div>
 
-    <div class="hero-section">
+    <div class="hero-section dark-bg">
       <div class="hero-header">This website is awesome</div>
       <div class="hero-description">
         This website has some subtext that goes here under the main title. It's
