Add hero-button class and styling

--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,15 @@
     </div>
 
     <div class="hero-section dark-bg">
-      <div class="hero-header">This website is awesome</div>
-      <div class="hero-description">
-        This website has some subtext that goes here under the main title. It's
-        a smaller font and the color is lower contrast.
+      <div class="hero-left">
+        <div class="hero-header">This website is awesome</div>
+        <div class="hero-description">
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast.
+        </div>
+        <button class="blue-bg hero-button">Sign up</button>
       </div>
-      <button>Sign up</button>
-
-      <img src="" alt="image placeholder" />
+      <div class="hero-right"><img src="" alt="image placeholder" /></div>
     </div>
     <div class="middle-section">
       <div class="middle-img">
