--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="hero-right"><img src="" alt="image placeholder" /></div>
     </div>
     <div class="middle-section">
+      <div class="middle-text">Some random information.</div>
       <div class="middle-img">
         <img src="" alt="placeholder" />
         <div class="img-subtext"></div>
