--- a/index.html
+++ b/index.html
@@ -30,21 +30,31 @@
     </div>
     <div class="middle-section">
       <div class="middle-text">Some random information.</div>
-      <div class="middle-img">
-        <img src="" alt="placeholder" />
-        <div class="img-subtext"></div>
-      </div>
-      <div class="middle-img">
-        <img src="" alt="placeholder" />
-        <div class="img-subtext"></div>
-      </div>
-      <div class="middle-img">
-        <img src="" alt="placeholder" />
-        <div class="img-subtext"></div>
-      </div>
-      <div class="middle-img">
-        <img src="" alt="placeholder" />
-        <div class="img-subtext"></div>
+      <div class="middle-images">
+        <div class="middle-img-text">
+          <div class="middle-img">&nbsp;</div>
+          <div class="img-subtext">
+            this is some subtext under an illustation or image
+          </div>
+        </div>
+        <div class="middle-img-text">
+          <div class="middle-img"></div>
+          <div class="img-subtext">
+            this is some subtext under an illustation or image
+          </div>
+        </div>
+        <div class="middle-img-text">
+          <div class="middle-img"></div>
+          <div class="img-subtext">
+            this is some subtext under an illustation or image
+          </div>
+        </div>
+        <div class="middle-img-text">
+          <div class="middle-img"></div>
+          <div class="img-subtext">
+            this is some subtext under an illustation or image
+          </div>
+        </div>
       </div>
     </div>
     <div class="quote-section">
