--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-    <div class="quote-section">
+    <div class="quote-section grey-bg">
       <div class="quote-text">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
