--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
       </div>
       <div class="hero-right"><img src="" alt="image placeholder" /></div>
     </div>
+
     <div class="middle-section">
       <div class="middle-text">Some random information.</div>
       <div class="middle-images">
         <div class="middle-img-text">
-          <div class="middle-img">&nbsp;</div>
+          <div class="middle-img"></div>
           <div class="img-subtext">
             this is some subtext under an illustation or image
           </div>
@@ -57,6 +58,7 @@
         </div>
       </div>
     </div>
+
     <div class="quote-section grey-bg">
       <div class="quote-text">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
@@ -65,13 +67,17 @@
       </div>
       <div class="quote-author">-Thor, God of Thunder</div>
     </div>
-    <div class="call-to-action-section">
-      <div class="blue-box">
-        <div class="box-header">Call to action! It' time!</div>
-        <div class="box-subtext">
-          Sign up for our product by clicking that button right over there!
+
+    <div class="cta-section">
+      <div class="cta-box blue-bg">
+        <div>
+          <div class="cta-box-header">Call to action! It' time!</div>
+          <div class="cta-box-subtext">
+            Sign up for our product by clicking that button right over there!
+          </div>
         </div>
-        <button>Sign up</button>
+
+        <button class="cta-box-button blue-bg">Sign up</button>
       </div>
     </div>
     <div class="bottom-section">
