--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <button class="cta-box-button blue-bg">Sign up</button>
       </div>
     </div>
-    <div class="bottom-section">
-      <div class="bottom-text"></div>
+    <div class="bottom-section dark-bg">
+      <div class="bottom-text">Copyright © The Odin Project 2021</div>
     </div>
   </body>
 </html>
